--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ a:visited {
 .form {
   background-color: var(--color-dark--2);
   border-radius: 5px;
-  padding: 1.5rem 2.75rem;
+  padding: 1.5rem 2rem;
   margin-bottom: 1.75rem;
 
   display: grid;
@@ -146,7 +146,8 @@ a:visited {
 }
 
 .form__label {
-  flex: 0 0 50%;
+  flex: 0 0 20%;
+  margin-right: 1rem;
   font-size: 1.5rem;
   font-weight: 600;
 }
