--- a/style.css
+++ b/style.css
@@ -146,8 +146,8 @@ a:visited {
 }
 
 .form__label {
-  flex: 0 0 20%;
-  margin-right: 1rem;
+  flex: 0 0 40%;
+  margin-right: .5rem;
   font-size: 1.5rem;
   font-weight: 600;
 }
