--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* ROOT =============================== */
+
 :root {
   --color-brand--1: #ffb545;
   --color-brand--2: #00c46a;
@@ -38,6 +40,33 @@ body {
 a:link,
 a:visited {
   color: var(--color-brand--1);
+}
+
+/* 3RD PARTY X BUTTON */
+
+.mdivFirst {
+
+  margin-left: 8rem;
+  background-color: var(--color-dark--2);
+  border: 1px solid black;
+}
+
+.mdiv {
+  margin-left: 1rem;
+
+  height: 20px;
+  width: 2px;
+  background-color: black;
+  transform: rotate(45deg);
+  Z-index: 1;
+}
+
+.md {
+  height: 20px;
+  width: 2px;
+  background-color: black;
+  transform: rotate(90deg);
+  Z-index: 1;
 }
 
 /* SIDEBAR */
@@ -87,7 +116,20 @@ a:visited {
 .workout__title {
   font-size: 1.7rem;
   font-weight: 600;
-  grid-column: 1 / -1;
+  grid-column-start: span 3;
+  
+}
+
+.workout_delete {
+  grid-column-end: -1;
+
+  width: 22px;
+  height: 22px;
+
+  justify-self: right;
+
+  background-color: var(--color-dark--2);
+  outline: none;
 }
 
 .workout__details {
