--- a/style.css
+++ b/style.css
@@ -90,10 +90,9 @@ a:visited {
   font-size: 1.7rem;
   font-weight: 600;
   grid-column-start: span 3;
-  
 }
 
-.workout_delete {
+.workout__delete {
   grid-column-end: -1;
 
   width: 22px;
@@ -162,7 +161,7 @@ a:visited {
 
 .form__label {
   flex: 0 0 40%;
-  margin-right: .5rem;
+  margin-right: 0.5rem;
   font-size: 1.5rem;
   font-weight: 600;
 }
