--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ a:visited {
 }
 
 /* Alert Message */
-.alert-message {
+.alert--deletion {
   display: none;
   border: 3px solid var(--color-brand--2);
   border-radius: 8px;
@@ -217,11 +217,11 @@ a:visited {
   margin: 1rem 0;
 }
 
-.alert-message p {
+.alert--deletion p {
   margin-bottom: 2rem;
 }
 
-.alert-message--active {
+.alert--deletion--active {
   display: unset;
 }
 
