--- a/style.css
+++ b/style.css
@@ -131,16 +131,16 @@ a:visited {
 .form {
   background-color: var(--color-dark--2);
   border-radius: 5px;
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 1.5rem 0.5rem 1.5rem;
   margin-bottom: 1.75rem;
 
+  transition: all 0.5s, transform 1ms;
+}
+
+.form__content {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0.5rem 2.5rem;
-
-  /* Match height and activity boxes */
-  height: 9.25rem;
-  transition: all 0.5s, transform 1ms;
 }
 
 .form.hidden {
@@ -183,8 +183,32 @@ a:visited {
   background-color: #fff;
 }
 
+.form__submit {
+  display: flex;
+  justify-content: center;
+  padding: 0 0.5rem;
+}
+
 .form__btn {
-  display: none;
+  margin: 1rem 0;
+  height: 2.5rem;
+  width: 100%;
+
+  background-color: var(--color-brand--2);
+  border: 2px solid var(--color-light--2);
+  border-radius: 5px;
+  transition: all 0.2s;
+
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: var(--color-light--2);
+}
+
+.form__btn:hover {
+  outline: none;
+  background-color: var(--color-light--2);
+  border: 2px solid var(--color-brand--2);
+  color: var(--color-dark--1);
 }
 
 .copyright {
